# hierophant

./: .gitignore  .nojekyll  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.html  exploring-data.html  index.html  nbeats_example.html  pyproject.toml  random_forest_explanation.html  random_forest_explanation.ipynb  robots.txt  search.json  sitemap.xml  using-llms.html  using-vectorstores.html
docs/: _quarto.yml  index.qmd  random_forest_explanation.ipynb  random_forest_explanation.qmd  using-llms.qmd  using-vectorstores.qmd
docs/_site/: index.html
examples/: nbeats_example.ipynb  random_forest_explanation.ipynb
llama_lime/: explainer.py  explorer.py  statistics.py
tests/: test_explainer.py
